@@ -4,6 +4,7 @@
 BZFlag 1.12.0  (was 1.11.x)
 ---------------------------
 
+* Server Start Menu now allows selection between Rabbit Chase styles - Ian Agar
 * Tabbed Message Panel - Scott Wichser
 * Fonts settable via BZDB - Daniel Remenak
 * New font management system and fonts - Daniel Remenak, Jeff Myers
